--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visual Designer & Writer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
 
 </head>
 <body class="bg-image">
