--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visual Designer & Writer</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/favicon.png" type="image/x-icon">
 
 </head>
 <body class="bg-image">
